<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="20dp">



    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/add_a_program"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="10sp"
        android:onClick="btn_toAddForm"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnToUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/view_accounts"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="10sp"
        android:onClick="btn_toUsers"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnDelUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/delete_accounts"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="10sp"
        android:onClick="btn_toDelUsers"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnUpdateUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/update_accounts"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="10sp"
        android:onClick="btn_toUpdateUsers"
        android:layout_marginTop="10dp"/>


</LinearLayout>