<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddForm"
    android:padding="5dp"
    android:background="@drawable/gradient_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercises"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/etExercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <SeekBar
                android:id="@+id/sbDiff"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:max="100"
                android:progress="10" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/spPurpose"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meals"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/etMeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_the_program"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                android:numStars="5"
                android:progress="0"
                android:rating="3"
                android:stepSize="0.5" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/rounded_btn"
                android:onClick="Submit"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>